@@ -14,15 +14,16 @@
 
   <bundles>
 
-    <bundle name="windows-media-server-producer-component">
+    <bundle project="windowsmedia" name="windows-media-server-producer-component">
         <dependencies>
             <dependency name="component" />
         </dependencies>
 
         <directories>
             <directory name="flumotion/component/producers">
-                <filename location="__init__.py" />
-                <filename location="wmeslave.py" />
+                <filename location="wms.py" />
+                <filename location="asfparse.py" />
+                <filename location="queue.py" />
             </directory>
         </directories>
     </bundle>
